# EmkyDisk

./: CMakeLists.txt  README.md  button.h  disk.cpp  disk.h  main.cpp  other.cpp  other.h  searchbar.cpp  searchbar.h  segment.cpp  segment.h  settings.h  thread_pool.h  window.cpp  window.h
